--- a/NIMDemo/NIMDemo/Supporting Files/Info.plist
+++ b/NIMDemo/NIMDemo/Supporting Files/Info.plist
@@ -37,6 +37,8 @@
 	<string>云信想使用您的地理位置信息</string>
 	<key>NSLocationWhenInUseDescription</key>
 	<string>云信想使用您的地理位置信息</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>云信想要使用白板</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
